# QLogViewer

./: .gitignore  CMakeLists.txt  README.md  xmake.lua
.github/workflows/: build.yml
src/: AppConfig.cpp  AppConfig.h  EditInfoAreaWidget.h  EditInfoAreaWidgetMetaDescription.h  FormatedStringCache.cpp  FormatedStringCache.h  InfoAreaEnabledPlainTextEdit.cpp  InfoAreaEnabledPlainTextEdit.h  LineNumberAreaWidget.h  LineNumberPlainTextEdit.cpp  LineNumberPlainTextEdit.h  LogEntry.h  LogFilter.Convert.h  LogFilter.cpp  LogFilter.h  LogHolder.cpp  LogHolder.h  LogLevel.Convert.h  LogLevel.h  LogLevelAreaWidget.h  LogParser.cpp  LogParser.h  LogProfile.cpp  LogProfile.h  LogSearch.cpp  LogSearch.h  LogViewer.cpp  LogViewer.h  LogViewerTab.cpp  LogViewerTab.h  LogViewerTab.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  Profiler.hpp  QProfileListWidget.cpp  QProfileListWidget.h  RecentFiles.cpp  RecentFiles.h  SettingsWindow.cpp  (+5 more)
tests/: main.cpp  test_FormattedStringCache.cpp  test_LogEntry.cpp  test_LogFilter.cpp  test_LogFilter_comprehensive.cpp  test_LogHolder.cpp  test_LogLevel.cpp  test_LogParser.cpp  test_LogProfile.cpp  test_YamlConverters.cpp
